# pygame_sheetcut

./: LICENSE  README.md  pyproject.toml
src/pygame-sheetcut/: __init__.py
src/pygame_sheetcut/: cut.py
tests/: test_grid.py
